<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yester</string>
    <string name="app_name_lite">Yester Lite</string>
    
    <string name="media_date">Date:</string>
    <string name="media_duration">Duration:</string>
    <string name="media_file_size">File size:</string>
    <string name="media_tags">Tags</string>
    
    <string name="session_timeline">Timeline</string>
    <string name="session_range_selector">Range Selector</string>
    <string name="session_my_timelines">Minhas timelines</string>
    <string name="session_compilations">Compilations</string>
    <string name="session_settings">Settings</string>
    <string name="session_about">About</string>

    <string name="navigation_drawer_title">Options</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    
    <string name="settings">Settings</string>
    <string name="settings_movies_size_title">Movie length:</string>
    <string name="settings_movies_size_description">Default movie length. This can be changed anytime you want.</string>
    <string name="settings_movies_size_warning">Note: Some devices are not compatible with this feature. If that is your case you\'ll need to stop the recording manually.</string>
    <string name="settings_movies_size_small">Small (1 second)</string>
    <string name="settings_movies_size_medium">Medium (3 seconds)</string>
    <string name="settings_movies_size_large">Large (5 seconds)</string>
    <string name="settings_only_default_video_of_the_day">Use only the default video of the day on compilations</string>

    <string name="about_us">Broditech is a company devoted to the development of casual games and mobile apps. </string>
    <string name="about_iseconds">Yester is the best way to record your memories! You can do it in series of short movies.</string>
    <string name="about_stay_in_touch">Stay in touch:</string>
    <string name="about_tutorial">Tutorial</string>

    <string name="yester_lite_only_default_movies_message">The lite version is limited to only default movie by day when compile</string>
    <string name="yester_lite_get_full"><u>Get full version</u></string>
    <string name="about_yester_lite">You can upgrade your Yester Lite to full version anytime. No data will be lost.</string>
    
    <string name="item_timeline_day_sample">12</string>
    
    <string name="default_timeline_name">My Life</string>
    <string name="default_timeline_description">This is my life!!</string>
    
    <string name="action_camera">Record a video</string>

</resources>