<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="iSeconds.Droid.TimelineActivity$PlaceholderFragment">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/activity_padding"
            android:id="@+id/scrollView1">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/linearLayout1">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:id="@+id/linearLayout2">
                    <TextView
                        android:text="@string/settings_movies_size_title"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/settingsTitle"
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:text="@string/settings_movies_size_description"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/settingsDescription"
                        android:layout_marginBottom="10dp"
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                    <RadioGroup
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/settingsVideoSizeGroup"
                        android:padding="5dp">
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/settings_movies_size_small"
                            android:id="@+id/settingsVideoSizeSmall"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/settings_movies_size_medium"
                            android:id="@+id/settingsVideoSizeMedium"
                            android:checked="true"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/settings_movies_size_large"
                            android:id="@+id/settingsVideoSizeLarge"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </RadioGroup>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:id="@+id/linearLayout3"
                    android:layout_marginTop="10dp">
                    <CheckBox
                        android:text="@string/settings_only_default_video_of_the_day"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/settingsOnlyDefaultVideos"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/settingsLiteWarning"
                        android:text="@string/yester_lite_only_default_movies_message"
                        android:layout_marginTop="10dp"
                        android:textStyle="italic"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:layout_gravity="bottom" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/view1"
                    android:layout_weight="1"
                    android:minHeight="15dp"
                    android:minWidth="20dp" />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/settingWarning"
                    android:text="@string/settings_movies_size_warning"
                    android:layout_marginTop="10dp"
                    android:textStyle="italic"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_gravity="bottom" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>